--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -1,8 +1,21 @@
 @import "../../styles/variables";
+
 .sidebar {
   min-height: 100vh;
   position: fixed;
   width: $sidebarWidth;
   border-right: 1px solid lightgray;
   padding: 15px;
+
+  .textField {
+    width: 100%;
+  }
+
+  h3 {
+    margin: 1rem 0;
+  }
+
+  .filterCheck {
+    margin-left: .75rem;
+  }
 }
