--- a/src/components/Cars/Cars.module.scss
+++ b/src/components/Cars/Cars.module.scss
@@ -1,6 +1,6 @@
 @import "../../styles/variables";
 .wrapper {
-  padding: 15px 15px 15px $sidebarWidth + 15px;
+  padding: 15px;
   width: 100%;
 
   .carsList {
