--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -1,8 +1,6 @@
-@import "../../styles/variables";
-
 .sidebar {
   min-height: 100vh;
-  width: $sidebarWidth;
+  width: 350px;
   border-right: 1px solid lightgray;
   padding: 15px;
 
